@@ -78,6 +78,8 @@ public class SparkExecutable extends AbstractExecutable {
     private static final String COUNTER_SAVE_AS = "CounterSaveAs";
     private static final String CONFIG_NAME = "configName";
 
+    private static final String EXECUTOR_JVM_ARG = "spark.executor.extraJavaOptions";
+
     public void setClassName(String className) {
         this.setParam(CLASS_NAME, className);
     }
@@ -208,7 +210,7 @@ public class SparkExecutable extends AbstractExecutable {
         if (!StringUtils.isEmpty(sparkJobId)) {
             return onResumed(sparkJobId, mgr);
         } else {
-            String cubeName = this.getParam(SparkCubingByLayer.OPTION_CUBE_NAME.getOpt());
+            String cubeName = this.getParam(BatchConstants.ARG_CUBE_NAME);
             CubeInstance cube;
             if (cubeName != null) {
                 cube = CubeManager.getInstance(context.getConfig()).getCube(cubeName);
@@ -220,7 +222,7 @@ public class SparkExecutable extends AbstractExecutable {
                 config = cube.getConfig();
             } else {
                 // when loading hive table, we can't get cube name/config, so we get config from project.
-                String projectName = this.getParam(SparkColumnCardinality.OPTION_PRJ.getOpt());
+                String projectName = this.getParam(BatchConstants.ARG_PROJECT);
                 ProjectInstance projectInst = ProjectManager.getInstance(context.getConfig()).getProject(projectName);
                 config = projectInst.getConfig();
             }
@@ -251,7 +253,7 @@ public class SparkExecutable extends AbstractExecutable {
 
             if (cube != null && !isCreateFlatTable()) {
                 setAlgorithmLayer();
-                String segmentID = this.getParam(SparkCubingByLayer.OPTION_SEGMENT_ID.getOpt());
+                String segmentID = this.getParam(BatchConstants.ARG_SEGMENT_ID);
                 CubeSegment segment = cube.getSegmentById(segmentID);
                 Segments<CubeSegment> mergingSeg = cube.getMergingSegments(segment);
                 dumpMetadata(segment, mergingSeg);
@@ -290,8 +292,15 @@ public class SparkExecutable extends AbstractExecutable {
             }
 
             for (Map.Entry<String, String> entry : sparkConfs.entrySet()) {
-                stringBuilder.append(" --conf ").append(entry.getKey()).append("=").append(entry.getValue())
-                        .append(" ");
+                //"spark.executor.extraJavaOptions=-XX:+PrintGCDetails -XX:+PrintGCTimeStamps" need surround with "".
+                if (entry.getKey().equals(EXECUTOR_JVM_ARG)) {
+                    stringBuilder.append(" --conf ").append("\"").append(entry.getKey()).append("=")
+                            .append(entry.getValue()).append("\"").append(" ");
+                    logger.info("use spark.executor.extraJavaOptions: " + stringBuilder.toString());
+                } else {
+                    stringBuilder.append(" --conf ").append(entry.getKey()).append("=").append(entry.getValue())
+                            .append(" ");
+                }
             }
 
             stringBuilder.append("--jars %s %s %s");
@@ -513,7 +522,7 @@ public class SparkExecutable extends AbstractExecutable {
         CubeDescTiretreeGlobalDomainDictUtil.cuboidJob(segment.getCubeDesc(), dumpList);
 
         JobRelatedMetaUtil.dumpAndUploadKylinPropsAndMetadata(dumpList, (KylinConfigExt) segment.getConfig(),
-                this.getParam(SparkCubingByLayer.OPTION_META_URL.getOpt()));
+                this.getParam(BatchConstants.ARG_META_URL));
     }
 
     private void attachSegmentsMetadataWithDict(List<CubeSegment> segments) throws IOException {
@@ -530,7 +539,7 @@ public class SparkExecutable extends AbstractExecutable {
             CubeDescTiretreeGlobalDomainDictUtil.cuboidJob(segment.getCubeDesc(), dumpList);
         }
         JobRelatedMetaUtil.dumpAndUploadKylinPropsAndMetadata(dumpList, (KylinConfigExt) segments.get(0).getConfig(),
-                this.getParam(SparkCubingByLayer.OPTION_META_URL.getOpt()));
+                this.getParam(BatchConstants.ARG_META_URL));
     }
 
     protected void readCounters(final Map<String, String> info) {
